Edited the styling of the identify results table, moved the close table and download geojson buttons to the table title and and edited the style of the scrollbars.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -1,7 +1,7 @@
 <template>
   <require from="resources/value-converters/objectKeysValueConverter"></require>
   <div class="row">
-    <ul class="collection with-header col l3 m3 s3 layer-list">
+    <ul class="collection with-header col l3 m3 s3 layer-list scrollbar-hidden">
       <li class="collection-header light-green darken-3"><h4>Layers</h4></li>
         <div class="collapsible-open-close-events">
           <ul md-collapsible md-on-open-start.delegate="collapsibleOpen($event.detail.el.childNodes[1].id)" md-on-close-start.delegate="collapsibleClose($event.detail.el.childNodes[1].id)">
@@ -33,9 +33,6 @@
 
                   <a id='refresh' md-button="floating: true;" md-tooltip="position: bottom; text: Reset range settings;" md-waves="color: light;" class="red" click.trigger="resetRangeSettings(layer.id)"><i class="material-icons">cached</i></a>
                   <a id='identify' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked location;" md-waves="color: light;" click.trigger="toggleTool('identify')" class.bind="buttonCheck.identify ? 'red' : 'blue'"><i class="material-icons">details</i></a>
-                  <a id='delete' show.bind="buttonCheck.identify" md-button="floating: true;" md-tooltip="position: bottom; text: Delete the results table?;" md-waves="color: light;" class.bind="buttonCheck.indentify ? 'red' : 'blue'" click.trigger="identifyTool.confirmDeleteTable()"><i class="material-icons">${identifyTool.deleteTable ? 'close' : 'delete'}</i></a>
-                  <a id='yesDelete' show.bind="identifyTool.deleteTable" md-button="floating: true;" md-tooltip="position: bottom; text: Yes, delete please;" md-waves="color: light;" class.bind="buttonCheck.indentify ? 'red' : 'blue'" click.trigger="identifyTool.yesDeleteTable()"><i class="material-icons">check</i></a>
-                  <a id='save' show.bind="buttonCheck.identify" md-button="floating: true;" md-tooltip="position: bottom; text: Save the results locally;" md-waves="color: light;" class.bind="buttonCheck.indentify ? 'red' : 'blue'" click.trigger="saveIdentifyGeojson()" download="identifyTable.geojson" href="${identifyTool.uriContent}"><i class="material-icons">file_download</i></a>
                   <a id='zonalStat' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked location;" md-waves="color: light;" class.bind="buttonCheck.zonalStat ? 'red' : 'blue'" click.trigger="toggleTool('zonalStat')"><i class="material-icons">dashboard</i></a>
                   <a id='tsChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked location;" md-waves="color: light;" class.bind="buttonCheck.tsChart ? 'red' : 'blue'" click.trigger="toggleTool('tsChart')"><i class="material-icons">timeline</i></a>
                   <a id='zonalTSChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked location;" md-waves="color: light;" class.bind="buttonCheck.zonalTSChart ? 'red' : 'blue'" click.trigger="toggleTool('zonalTSChart')"><i class="material-icons">multiline_chart</i></a>
@@ -47,29 +44,39 @@
           </ul>
         </div>
       </li>
-      <div show.bind="identifyTool.identifyResultWindow" class="col l12 m12 s12">
-        <table class="responsive-table striped centered">
-          <thead class="collection-header lime">
-            <tr>
-                <th>Id</th>
-                <th>Product</th>
-                <th>Date</th>
-                <th>Coordinates</th>
-                <th>Value</th>
-                <th>x</th>
-            </tr>
-          </thead>
-          <tbody class="rows-font-size lime">
-            <tr repeat.for="element of identifyTool.identifyArray">
-              <td>${element.id}</td>
-              <td>${element.product}</td>
-              <td>${element.date}</td>
-              <td>${element.coordinates[0]}, ${element.coordinates[1]}</td>
-              <td>${element.value}</td>
-              <td><a md-button="floating: true;" md-tooltip="position: bottom; text: Delete this row;" md-waves="color: light;" class="orange btn-small" click.trigger="identifyTool.deleteResultsTableRow(element.id)"><i class="material-icons">close</i></a></td>
-            </tr>
-          </tbody>
-        </table>
+      <div show.bind="identifyTool.identifyResultWindow" class="col l12 m12 s12 scale-transition results-table lime">
+        <div>
+          <div class='table-comtrolls-wrapper'>
+            <h5 class='table-controll-title white-text'>RESULTS TABLE</h5>
+            <span> 
+              <a id='yesDelete' show.bind="identifyTool.deleteTable" md-button="floating: true;" md-tooltip="position: bottom; text: Yes, delete please;" md-waves="color: light;" class="tr-green" click.trigger="identifyTool.yesDeleteTable()"><i class="material-icons icon-grey">check</i></a>
+              <a id='save' show.bind="buttonCheck.identify" md-button="floating: true;" md-tooltip="position: bottom; text: Save the results locally;" md-waves="color: light;" class="tr-green" click.trigger="saveIdentifyGeojson()" download="identifyTable.geojson" href="${identifyTool.uriContent}"><i class="material-icons icon-grey">file_download</i></a>
+              <a id='delete' show.bind="buttonCheck.identify" md-button="floating: true;" md-tooltip="position: bottom; text: Delete the results table?;" md-waves="color: light;" class="tr-green" click.trigger="identifyTool.confirmDeleteTable()"><i class="material-icons icon-grey">${identifyTool.deleteTable ? 'close' : 'delete'}</i></a>
+            </span>
+          </div>
+          <table class="responsive-table striped centered">
+            <thead class="collection-header lime">
+              <tr>
+                  <th>Id</th>
+                  <th>Product</th>
+                  <th>Date</th>
+                  <th>Coordinates</th>
+                  <th>Value</th>
+                  <th>x</th>
+              </tr>
+            </thead>
+            <tbody class="rows-font-size lime">
+              <tr repeat.for="element of identifyTool.identifyArray">
+                <td>${element.id}</td>
+                <td>${element.product}</td>
+                <td>${element.date}</td>
+                <td>${element.coordinates[0]}, ${element.coordinates[1]}</td>
+                <td>${element.value}</td>
+                <td><a md-button="floating: true;" md-tooltip="position: bottom; text: Delete this row;" md-waves="color: light;" class="orange btn-small" click.trigger="identifyTool.deleteResultsTableRow(element.id)"><i class="material-icons">close</i></a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </ul>
     <div id="basemap" class="map col l9 m9 s9"></div>
