Finished tool table swiching and other functionalities on the frontend. Moving to develop the zonal statistics backend.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -109,7 +109,7 @@
               </tr>
             </thead>
             <tbody class="rows-font-size lime">
-              <tr repeat.for="element of identifyTool.zonalStatsArray">
+              <tr repeat.for="element of identifyTool.resultsTables.zonalStatsPolygons.table">
                 <td>${element.id}</td>
                 <td>${element.product}</td>
                 <td>${element.date}</td>
