--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,8 @@
   <require from="./styles.css"></require>
   <nav>
     <div class="nav-wrapper light-green darken-4">
-      <a href="#" class="brand-logo">WebMap Project</a>
+      <a href="#" class="brand-logo">Sattilia</a>
       <ul class="right">
-<!--         <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">Tools</a></li>
-        <li><a click.trigger="layerMenuToggle()" if.bind="authenticated">Layers</a></li> -->
         <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">${userNameDisplay}</a></li>
       </ul>
     </div>
