--- a/src/login.html
+++ b/src/login.html
@@ -1,16 +1,21 @@
 <template>
+  <div class="row align-center logo-row-height">
+    <div class="col s5 m5 l5"></div>
+    <img  class="col s2 m2 l2" src="resources/login/bg.svg" alt="">
+    <div class="col s5 m5 l5"></div>
+  </div>
   <form autocomplete="off" role = "form" submit.delegate = "login()" enctype="multipart/form-data">
     <div class="row align-center">
-      <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><h2>Login</h2></div>
-      <div class="col s12 m4 l2"><p></p></div>
+      <div class="col s2 m2 l2"><p></p></div>
+      <div class="col s8 m8 l8"><h2 class="brown-text">Login</h2></div>
+      <div class="col s2 m2 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="userNameErrors">
-          <input id="userName" name="userName" class="align-center" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
-          <h5>Username <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors">${errorInfo.error.message}</span></h5>
+          <input id="userName" name="userName" class="align-center brown-text" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
+          <h5 class="brown-text">Username <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors">${errorInfo.error.message}</span></h5>
           </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -19,42 +24,35 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="passwordErrors">
-          <input id="password" name="passeord" class="align-center"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
-          <h5>Password <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
+          <input id="password" name="password" class="align-center brown-text"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
+          <h5 class="brown-text">Password <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>    
       <div class="col s12 m4 l2"><p></p></div>
     </div>
-    <!-- reCaptcha -->
-<!--     <require from="./recaptcha/recaptcha"></require>
-    <div class="row align-center">
-      <div class="col s12 m4 l2 align-center"><p></p></div>
-      <recaptcha class="col s12 m4 l8"></recaptcha>
-      <div class="col s12 m4 l2"><p></p></div>
-    </div> -->
     <!-- NOTIFICATION -->
     <require from='./notification/notification'></require>
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="login">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light" type="submit" name="login">Submit</button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="registration" route-href="route: registration;">I don't have an account!</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="registration" route-href="route: registration;">I don't have an account!</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="passreset" route-href="route: requestresetpassword;">I forgot my password</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="passreset" route-href="route: requestresetpassword;">I forgot my password</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="facebook">Follow us on Facebook</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="facebook">Follow us on Facebook</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
